Fix product image scaling on mobile devices using responsive CSS styling

--- a/src/pages/Home/components/CategoriesSection/CategoriesSection.css
+++ b/src/pages/Home/components/CategoriesSection/CategoriesSection.css
@@ -29,6 +29,7 @@
 .img-cont {
   background-color: black;
   z-index: -1;
+  width: 100%;
 }
 
 .category-card h3 {
